# cls

./: .clang-format  .editorconfig  .ghci  CMakeLists.txt  FormatTrace.hs  LICENSE  README.md  TODO.txt  cls64.bat  configure-clang.sh  configure-gnu-64.sh  configure-make.bat  configure-vs2019.bat  configure-vs2022.bat  mkspv.bat  setup-vs2017.bat  setup-vs2019.bat  setup.bat
demos/: blur.cls  blur9.cl  demo.cl  demo.cls  demo2.cl  demo2.cls  demo3.cl  demo3.cls
examples/: mat.cl  matmul_compare_devices.cls  matmul_compare_kernels.cls  trivial1.cls  vec.cl
src/: cl_exts.hpp  cl_headers.hpp  cl_lib.cpp  cl_lib.hpp  cls.cpp  cls.flex  cls.hpp  cls_init.cpp  cls_lex.yy.cpp  cls_lex.yy.hpp  cls_opts.hpp  cls_parser.cpp  devices.cpp  devices.hpp  fatal.cpp  fatal.hpp  half.cpp  half.hpp  image.cpp  image.hpp  lexemes.hpp  list_device.cpp  list_map.hpp  macros.hpp  main-format-metrics.cpp  main-list-device-info.cpp  main-list-sysinfo.cpp  main.cpp  opts.hpp  stats.hpp  svm.cpp  svm.hpp  system.cpp  system.hpp  text.cpp  text.hpp
src/cl2bin/: cl2bin.cpp
src/ir/: cls_ir.cpp  cls_ir.hpp  types.cpp  types.hpp
src/parser/: cls.flex  cls_lex.yy.cpp  cls_lex.yy.hpp  cls_parser.cpp  cls_parser.hpp  decoder.hpp  intel_gen_binary_decoder.cpp  intel_gen_binary_decoder.hpp  kargs.cpp  kargs.hpp  lexemes.hpp  parser.cpp  parser.hpp  spirv_decoder.cpp  spirv_decoder.hpp
src/processors/: cls_interp.cpp  cls_interp.hpp  cls_interp_compile.cpp  cls_interp_execute.cpp  cls_interp_internal.hpp
tests/: CLSTester.hs  add.cl  add_buggy.cl  add_float2.spv  add_int.spv  args.cl  diff.cl  dims.cl  histogram.cl  images.cl  particles.cl  particles.spv  samplers.cl  samplers.cls  save-image-float4-ref.ppm  save-image.cl  spirv.cl  spirv.spv  test_image.ppm  transpose.cl  vecinit.cl  vecinit.cls
